Sources/sdk/sccio.h

#define IO_COMPRESSTYPE_NONE        0
#define IO_COMPRESSTYPE_ZLIB        1
#define IO_COMPRESSTYPE_BASE64      2
/* ASCIIHex decoding support added Nov 6, 2000*/
/*********************************************************************/
/*********************************************************************/
/*************************                   *************************/
/*************************     ASCIIHEX      *************************/
/*************************                   *************************/
/*********************************************************************/
/*********************************************************************/
typedef struct IOASCIIHEXDATAtag
{
    VTBOOL bEOD;    /* used when the least significant part is padded with '0' */
} IOASCIIHEXDATA, * PIOASCIIHEXDATA;
/* Flate decoding support added Nov 17, 2000 */
/*********************************************************************/
/*********************************************************************/
/*************************                   *************************/
/*************************       FLATE       *************************/
/*************************                   *************************/
/*********************************************************************/
/*********************************************************************/
#define FLATE_WINDOW                32768   /* buffer size */
#define FLATE_MASK                  (FLATE_WINDOW - 1)
#define FLATE_MAX_HUFFMAN           15      /* max Huffman code length */
#define FLATE_MAX_CODE_LEN_CODES    19      /* max number of code length codes */
#define FLATE_MAX_LIT_CODES         288     /* max number of literal codes */
#define FLATE_MAX_DIST_CODES        30      /* max number of distance codes */
#define FLATE_MAX_LENGTH            260     /* max number of length for  <length, backward distance> pair */
                                            /* (it is max 258 bytes according to RFC 1951) */

/* Structure to store input for creating the Huffman tree (Huffman code table entry) */
typedef struct FLATECODEtag
{
    VTSHORT nLength;    /* produced code lengths    */
    VTLONG  lCode;      /* produced codes           */
    VTLONG  lValue;     /* TODO:??                  */
} FLATECODE, * PFLATECODE;
/* Huffman code table */
typedef struct FLATEHUFFMANTABLEtag
{
    VTHANDLE        hStart; /* handle  to indexes of the first code of each length [IO_FLATE_MAX_HUFFMAN+2] */
    VTLONG*         pStart; /* pointer to indexes of the first code of each length [IO_FLATE_MAX_HUFFMAN+2] */
    PFLATECODE      pFlateCodes;
} FLATEHUFFMANTABLE, * PFLATEHUFFMANTABLE;
/* Decoding info for length and distance code words */
typedef struct FLATEDECODEtag
{
    VTLONG lBits;   /* number of extra bits */
    VTLONG lFirst;  /* first length/distance */
} FLATEDECODE, * PFLATEDECODE;
typedef struct IOFLATEDATAtag
{
    FLATEHUFFMANTABLE sLiteralCodeTab;  /* literal code table */
    FLATEHUFFMANTABLE sDistanceCodeTab; /* distance code table */
    VTHANDLE    hAllCodes;              /* handle to literal and distance codes. */
    PFLATECODE  pAllCodes;              /* pointer to literal and distance codes [IO_FLATE_MAX_LIT_CODES + IO_FLATE_MAX_DIST_CODES]. */
    VTLONG      lCodeBuf;               /* input buffer */
    VTLONG      lCodeSize;              /* number of bits in input buffer */
    VTBOOL      bCompressedBlock;       /* set if reading a compressed block */
    VTDWORD     dwBlockLen;             /* remaining length of uncompressed block */
    VTBOOL      bEndOfBlock;            /* set when end of block is reached */
    VTBOOL      bEOD;                   /* set when end of stream is reached */
    VTHANDLE    hDecompData;            /* handle to decompressed data buffer extracted form  <length, backward distance> pair. */
    VTBYTE * pDecompData;               /* buffer which will keep extracted decompressed data */
    VTDWORD     dwRemain;               /* number valid bytes in output buffer */
    /* predictor support */
    VTWORD       wSlidingWindowSize;    /* calculated from CINFO flag, and used to allocate buffer for sliding window */
    VTHANDLE  hPredictorData;           /* handle to the predictor sturcture. */
    VTBYTE * pPredictorData;            /* pointer to predictor sturcture [FLATE_MAX_LENGTH]. */
} IOFLATEDATA, * PIOFLATEDATA;
/*********************************************************************/
/*********************************************************************/
/*************************                   *************************/
/*************************        LZW        *************************/
/*************************                   *************************/
/*********************************************************************/
/*********************************************************************/

#define MAX_CODE_SIZE       12                      /* max number of bits that can be used. */
#define MIN_CODE_SIZE       8                       /* min number of bits that can be used. */
#define DICT_SIZE           (1 << MAX_CODE_SIZE)    /* size of the dictionary table (for 12 bits = 4096). */
#define CLEAR_CODE          (1 << MIN_CODE_SIZE)    /* 256 */
#define END_OF_DATA_CODE    (CLEAR_CODE + 1)        /* 257 */
#define FIRST_CODE          (CLEAR_CODE + 2)        /* 258 */
#define STOP_CODE           0xFFFF                  /* this code determines the stop condition when traversing */
                                                    /* multiway tree.  (initially was 0, but it turned out, that it was */
                                                    /* failing when parent contains 0 which should be retrieved. */


/* This data structure defines the dictionary.  Each entry in the dictionary has a code value.
 * which is emitted by the compressor.  Each node is actually made up of two pieces:
 *          - parent_code
            - character.
 * Code values of less than 256 are actually plain text codes.
 */
typedef struct DICTTTREEtag
{
    VTWORD  wParentCode;
    VTBYTE  byCharacter;
} LZWDICTTREE, * PLZWDICTTREE;
typedef struct IOLZWDATAtag
{
    VTHANDLE        hDictTreeArray;
    PLZWDICTTREE    pDictTreeArray;
    VTWORD          wDictNextCode;          /* next code to be added to the dictionary.                                         */
    VTHANDLE        hDecodeStack;           /* for reversing strings that come out of the tree.                                 */
    VTBYTE *        pDecodeStack;
    VTWORD          wStackPointer;
    VTBYTE          byCurrentCodeSize;      /* contains number of bits, which are currently read from the file.                 */
    VTWORD          wNextBumpCode;          /* defines the code that will trigger the next jump in bits size. 511, 1023, 2047)  */

    VTWORD          wPrevCode;              /* previous code rad from the input file.                                           */
    VTWORD          wCurrentCode;           /* current code read from the input file.                                           */
    VTBYTE          byFirstChar;            /* first character of the prevous code, used to construct dictionary entry.         */
    VTBOOL          bEOD;                   /* set true when END_OF_DATA_CODE is reached.                                       */

    VTDWORD         dwBitsBuf;              /* contains bits used for reading specified number of bits.                         */
    VTDWORD         dwBitsLeft;             /* number of bits in dwBitsBuf (used for transforming big-endian to little-endian). */

    VTHANDLE        hPredictorData;         /* handle to the predictor sturcture.                                               */
    VTBYTE *        pPredictorData;         /* pointer to predictor sturcture.                                                  */
} IOLZWDATA, * PIOLZWDATA;
#define IO_COMPRESSTYPE_NONE    0
#define IO_COMPRESSTYPE_ZLIB    1
#define IO_COMPRESSTYPE_BASE64  2
/*********************************************************************/
/*********************************************************************/
/*************************                   *************************/
/*************************     PREDICTOR     *************************/
/*************************                   *************************/
/*********************************************************************/
/*********************************************************************/

/* Predictor types: */
#define IO_PREDICTION_NONE          0
#define IO_PREDICTION_DEFAULT       1       /* also no prediction   */
#define IO_PREDICTION_TIFF          2
#define IO_PREDICTION_PNG_NONE      10      /* no prediction        */
#define IO_PREDICTION_PNG_SUB       11
#define IO_PREDICTION_PNG_UP        12
#define IO_PREDICTION_PNG_AVERAGE   13
#define IO_PREDICTION_PNG_PEATH     14
#define IO_PREDICTION_PNG_OPTIMUM   15
/* Masks for extracting data from the reserved words. */
#define PREDICTOR_MASK_COLORS       0xFF
#define PREDICTOR_MASK_BITS         0xFF00
#define PREDICTOR_MASK_EARLY        0xFF0000
/* When predictors are used we need to keep data in sliding window.  To get the size of
 * the slididng window CINFO flag from ZLIB header is read.  Its max value can be CINFO=7,
 * which gives sliding window size of 32k (2pow(CINFO+8).  Everything less than CINFO=7
 * will give smaller sliding widnow smaller and the value will be get by right shift.
 */
#define SLIDING_WINDOW_MAX          (1<<15)     /* 32k */