Sources/sccio.pas


     PIOASCIIHEXDATA = ^IOASCIIHEXDATA;
     IOASCIIHEXDATA = record
          bEOD : VTBOOL;
       end;
     PPIOASCIIHEXDATA = ^PIOASCIIHEXDATA;
  { Flate decoding support added Nov 17, 2000  }
  {******************************************************************* }
  {******************************************************************* }
  {************************                   ************************ }
  {************************       FLATE       ************************ }
  {************************                   ************************ }
  {******************************************************************* }
  {******************************************************************* }
  { buffer size  }

  const
     FLATE_WINDOW = 32768;
     FLATE_MASK = FLATE_WINDOW-1;
  { max Huffman code length  }
     FLATE_MAX_HUFFMAN = 15;
  { max number of code length codes  }
     FLATE_MAX_CODE_LEN_CODES = 19;
  { max number of literal codes  }
     FLATE_MAX_LIT_CODES = 288;
  { max number of distance codes  }
     FLATE_MAX_DIST_CODES = 30;
  { max number of length for  <length, backward distance> pair  }
     FLATE_MAX_LENGTH = 260;
  { (it is max 258 bytes according to RFC 1951)  }
  { Structure to store input for creating the Huffman tree (Huffman code table entry)  }
  { produced code lengths     }
  { produced codes            }
  { TODO:??                   }

  type

     PFLATECODE = ^FLATECODE;
     FLATECODE = record
          nLength : VTSHORT;
          lCode : VTLONG;
          lValue : VTLONG;
       end;
     PPFLATECODE = ^PFLATECODE;
  { Huffman code table  }
  { handle  to indexes of the first code of each length [IO_FLATE_MAX_HUFFMAN+2]  }
  { pointer to indexes of the first code of each length [IO_FLATE_MAX_HUFFMAN+2]  }

     PFLATEHUFFMANTABLE = ^FLATEHUFFMANTABLE;
     FLATEHUFFMANTABLE = record
          hStart : VTHANDLE;
          pStart : PVTLONG;
          pFlateCodes : PFLATECODE;
       end;
     PPFLATEHUFFMANTABLE = ^PFLATEHUFFMANTABLE;
  { Decoding info for length and distance code words  }
  { number of extra bits  }
  { first length/distance  }

     PFLATEDECODE = ^FLATEDECODE;
     FLATEDECODE = record
          lBits : VTLONG;
          lFirst : VTLONG;
       end;
     PPFLATEDECODE = ^PFLATEDECODE;
  { literal code table  }
  { distance code table  }
  { handle to literal and distance codes.  }
  { pointer to literal and distance codes [IO_FLATE_MAX_LIT_CODES + IO_FLATE_MAX_DIST_CODES].  }
  { input buffer  }
  { number of bits in input buffer  }
  { set if reading a compressed block  }
  { remaining length of uncompressed block  }
  { set when end of block is reached  }
  { set when end of stream is reached  }
  { handle to decompressed data buffer extracted form  <length, backward distance> pair.  }
  { buffer which will keep extracted decompressed data  }
  { number valid bytes in output buffer  }
  { predictor support  }
  { calculated from CINFO flag, and used to allocate buffer for sliding window  }
  { handle to the predictor sturcture.  }
  { pointer to predictor sturcture [FLATE_MAX_LENGTH].  }

     PIOFLATEDATA = ^IOFLATEDATA;
     IOFLATEDATA = record
          sLiteralCodeTab : FLATEHUFFMANTABLE;
          sDistanceCodeTab : FLATEHUFFMANTABLE;
          hAllCodes : VTHANDLE;
          pAllCodes : PFLATECODE;
          lCodeBuf : VTLONG;
          lCodeSize : VTLONG;
          bCompressedBlock : VTBOOL;
          dwBlockLen : VTDWORD;
          bEndOfBlock : VTBOOL;
          bEOD : VTBOOL;
          hDecompData : VTHANDLE;
          pDecompData : PVTBYTE;
          dwRemain : VTDWORD;
          wSlidingWindowSize : VTWORD;
          hPredictorData : VTHANDLE;
          pPredictorData : PVTBYTE;
       end;
     PPIOFLATEDATA = ^PIOFLATEDATA;
  {******************************************************************* }
  {******************************************************************* }
  {************************                   ************************ }
  {************************        LZW        ************************ }
  {************************                   ************************ }
  {******************************************************************* }
  {******************************************************************* }
  { max number of bits that can be used.  }

  const
     MAX_CODE_SIZE = 12;
  { min number of bits that can be used.  }
     MIN_CODE_SIZE = 8;
  { size of the dictionary table (for 12 bits = 4096).  }
     DICT_SIZE = 1 shl MAX_CODE_SIZE;
  { 256  }
     CLEAR_CODE = 1 shl MIN_CODE_SIZE;
  { 257  }
     END_OF_DATA_CODE = CLEAR_CODE+1;
  { 258  }
     FIRST_CODE = CLEAR_CODE+2;
  { this code determines the stop condition when traversing  }
     STOP_CODE = $FFFF;
  { multiway tree.  (initially was 0, but it turned out, that it was  }
  { failing when parent contains 0 which should be retrieved.  }
  { This data structure defines the dictionary.  Each entry in the dictionary has a code value.
   * which is emitted by the compressor.  Each node is actually made up of two pieces:
   *          - parent_code
              - character.
   * Code values of less than 256 are actually plain text codes.
    }

  type

     PDICTTTREE = ^DICTTTREE;
     DICTTTREE = record
          wParentCode : VTWORD;
          byCharacter : VTBYTE;
       end;
     LZWDICTTREE = DICTTTREE;
     PLZWDICTTREE = ^LZWDICTTREE;
     PPLZWDICTTREE = ^PLZWDICTTREE;
  { next code to be added to the dictionary.                                          }
  { for reversing strings that come out of the tree.                                  }
  { contains number of bits, which are currently read from the file.                  }
  { defines the code that will trigger the next jump in bits size. 511, 1023, 2047)   }
  { previous code rad from the input file.                                            }
  { current code read from the input file.                                            }
  { first character of the prevous code, used to construct dictionary entry.          }
  { set true when END_OF_DATA_CODE is reached.                                        }
  { contains bits used for reading specified number of bits.                          }
  { number of bits in dwBitsBuf (used for transforming big-endian to little-endian).  }
  { handle to the predictor sturcture.                                                }
  { pointer to predictor sturcture.                                                   }

     PIOLZWDATA = ^IOLZWDATA;
     IOLZWDATA = record
          hDictTreeArray : VTHANDLE;
          pDictTreeArray : PLZWDICTTREE;
          wDictNextCode : VTWORD;
          hDecodeStack : VTHANDLE;
          pDecodeStack : PVTBYTE;
          wStackPointer : VTWORD;
          byCurrentCodeSize : VTBYTE;
          wNextBumpCode : VTWORD;
          wPrevCode : VTWORD;
          wCurrentCode : VTWORD;
          byFirstChar : VTBYTE;
          bEOD : VTBOOL;
          dwBitsBuf : VTDWORD;
          dwBitsLeft : VTDWORD;
          hPredictorData : VTHANDLE;
          pPredictorData : PVTBYTE;
       end;
     PPIOLZWDATA = ^PIOLZWDATA;

//  const
//     IO_COMPRESSTYPE_NONE = 0;
//     IO_COMPRESSTYPE_ZLIB = 1;
//     IO_COMPRESSTYPE_BASE64 = 2;
  {******************************************************************* }
  {******************************************************************* }
  {************************                   ************************ }
  {************************     PREDICTOR     ************************ }
  {************************                   ************************ }
  {******************************************************************* }
  {******************************************************************* }
  const
  { Predictor types:  }
     IO_PREDICTION_NONE = 0;
  { also no prediction    }
     IO_PREDICTION_DEFAULT = 1;
     IO_PREDICTION_TIFF = 2;
  { no prediction         }
     IO_PREDICTION_PNG_NONE = 10;
     IO_PREDICTION_PNG_SUB = 11;
     IO_PREDICTION_PNG_UP = 12;
     IO_PREDICTION_PNG_AVERAGE = 13;
     IO_PREDICTION_PNG_PEATH = 14;
     IO_PREDICTION_PNG_OPTIMUM = 15;
  { Masks for extracting data from the reserved words.  }
     PREDICTOR_MASK_COLORS = $FF;
     PREDICTOR_MASK_BITS = $FF00;
     PREDICTOR_MASK_EARLY = $FF0000;
  { When predictors are used we need to keep data in sliding window.  To get the size of
   * the slididng window CINFO flag from ZLIB header is read.  Its max value can be CINFO=7,
   * which gives sliding window size of 32k (2pow(CINFO+8).  Everything less than CINFO=7
   * will give smaller sliding widnow smaller and the value will be get by right shift.
    }
  { 32k  }
     SLIDING_WINDOW_MAX = 1 shl 15;
  {
   | For transfering extra parmeters needed for prediction from IOCOMPRESSDATA, following is used:
   |      dwReserved1 - prediction values (1 - no prediction, 2 - TIFF prediction, 10 - 15 PNG prediction)
   |                (for more info see PDF Reference Pg. 48, and PNG specification - filter algorithms)
   |      dwReserved2 - number of colmuns (pixels per line)
   |      dwReserved3 - number of color components (last siginivicant byte 0xFF
   |      dwReserved3 - bits per pixel (second byte 0xFF00)
   |      dwReserved3 - early change (third byte 0xFF0000)
   | They are either repeated or extracted in this structure.
    }
  { dwReserved1 - predictor type  }
  { dwReserved2 - columns (pixels per line).  }
  { dwReserved3 - number of color components (0xFF)  }
  { dwReserved3 - lower byte of dwReserved3  0xFF00  }
  { dwReserved3 - higher byte of dwReserved3  0xFF0000  }
  { dwWidth*byColorComponents. - components per line  }
  { bytes per pixel.  }
  { bytes per line.  }
  { handle to predictor line buffer  }
  { pointer to predictor line buffer.  }
  { current index in predictor line.  }
  { handle to sliding window buffer  }
  { pointer to sliding widnow buffer  }
  { current index in sliding window.  }
  { contains mask for wrapping of index in Sliding window (as circular buffer).  }

  type
